--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,5 @@
+build:
+  skip: true
 archives:
 - id: kubectl-node-restart
   name_template: "{{ .TagName }}.zip"
@@ -6,3 +8,9 @@ archives:
   files:
   - LICENSE
   - node-restart.sh
+changelog:
+  sort: asc
+  filters:
+    exclude:
+    - '^docs:'
+    - '^test:'
