--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,7 +18,7 @@ changelog:
 release:
   ids:
   - kubectl-node-restart
-  name_template: "{{ .TagName }}.zip"
+  name_template: "{{ .Tag }}.zip"
   extra_files:
     - glob: ./LICENSE
     - glob: ./node-restart.sh
